--- a/1.3.IE6.7下css兼容性问题.html
+++ b/1.3.IE6.7下css兼容性问题.html
@@ -41,7 +41,7 @@
         解决：
             不能嵌套块元素
 
-        8、margin传递问题（编剧重叠问题）
+        8、margin传递问题（边距重叠问题）
 
             1）子元素的margin-top会和父元素的margin-top 重叠
         解决：
@@ -64,6 +64,15 @@
         解决：
             1）两个浮动元素中间避免出现内联元素或者注释
             2）与父级元素宽度相差3px及以上
+        12、子级宽高比父级大，给父级添加overflow:hidden,且子级有相对定位，则父级包不住父级
+        解决：
+            给父级添加相对定位(父级与子级处于同样条件下)。
+        13、父级宽高为奇数，且有定位，子级绝对定位 right 和 bottom 有1px 偏差
+        解决：
+            父级宽高避免奇数
+        14、表单元素背景图片，内容输入满时，会被内容挤的移动
+        解决：
+            background-attachment:fixed
             
 
      -->
